--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,38 @@
       }
   ],
   "minimum-stability": "dev",
-"repositories": [
-{
-    "type": "package",
-    "package": {
+  "repositories": [
+    {
+      "type": "package",
+      "package": {
         "name": "KittyCatTech/cryptopia-api-php",
         "version": "1.0",
         "source": {
-            "url": "https://github.com/KittyCatTech/cryptopia-api-php.git",
-            "type": "git",
-            "reference": "master"
+          "url": "https://github.com/KittyCatTech/cryptopia-api-php.git",
+          "type": "git",
+          "reference": "master"
         }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "krakenfx/kraken-api-client",
+        "version": "1.0",
+        "source": {
+          "url": "https://github.com/krakenfx/kraken-api-client",
+          "type": "git",
+          "reference": "master"
+        }
+      }
     }
-}],
+  ],
   "require": {
     "KittyCatTech/cryptopia-api-php": "1.0",
+    "krakenfx/kraken-api-client": "1.0",
     "guzzlehttp/guzzle": "~6.0",
-      "monolog/monolog": "^1.23",
-      "aws/aws-sdk-php": "^3.50"
+    "monolog/monolog": "^1.23",
+    "aws/aws-sdk-php": "^3.50"
   },
   "autoload": {
     "psr-4": {
