--- a/config.ini.example
+++ b/config.ini.example
@@ -4,4 +4,8 @@ CRYPTOPIA_API_KEY = "xxxxxxxxxx"
 CRYPTOPIA_API_SECRET = "xxxxxxxxxx"
 KRAKEN_API_KEY = "xxxxxxxxxx"
 KRAKEN_API_SECRET = "xxxxxxxxxx"
-KRAKEN_BETA_FLAG = true or false
+KRAKEN_BETA_FLAG = false
+COINBASE_API_KEY = "xxxxxxxxxx"
+COINBASE_API_SECRET = "xxxxxxxxxx"
+BINANCE_API_KEY = "xxxxxxxxxx"
+BINANCE_API_SECRET = "xxxxxxxxxx"
