adding in vue and npm; fixing bittrex

--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,8 @@
       "CoinHoldings\\": "src/",
       "CryptoClient\\": "src/CryptoClient/"
     }
+  },
+  "scripts": {
+    "post-update-cmd": [ "npm install" ]
   }
 }
